overflow fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -64,7 +64,8 @@ body {
         justify-content: flex-end;
         align-items: center;
         height: 100vh;
-        width: 100vw;
+        max-width: 100vw;
+        overflow: hidden;
     }
 
 }
